<resources>
    <string name="msg_subscribed">Subscribe to new topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name">NetSDK Demo</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="common_information">Please Choose Suitable Environment</string>
    <string name="common_login">Login</string>
    <string name="common_logout">Logout</string>
    <string name="logining">Logining...</string>
    <string name="waiting">Waiting...</string>
    <string name="title_function_list">Function List</string>
    <string name="activity_main_ip"> IP </string>
    <string name="activity_main_search_device"> Search Device </string>
    <string name="activity_main_ip_domin"> IP/Domain </string>
    <string name="activity_main_wifi_config"> WIFI Configuration </string>
    <string name="activity_main_init_dev_account"> Init DevAccount </string>
    <string name="activity_main_p2p"> P2P </string>
    <string name="activity_preview"> SingleChannelPreview </string>
    <string name="activity_main_talk"> Talk </string>
    <string name="activity_main_ap_config"> AP Configuration </string>
    <string name="activity_iplogin_device_ip">Device IP</string>
    <string name="activity_iplogin_device_port">Device Port</string>
    <string name="activity_iplogin_username">Username</string>
    <string name="activity_iplogin_password">Password</string>
    <string name="activity_iplogin_port_err">Please check input device port</string>
    <string name="activity_iplogin_login_success">Login device success</string>
    <string name="activity_iplogin_login_failed">Login device failed</string>
    <string name="activity_iplogin_ip_empty">Please input ip address</string>
    <string name="activity_iplogin_port_empty">Please input port</string>
    <string name="activity_iplogin_username_empty">Please input username</string>
    <string name="activity_iplogin_password_empty">Please input password</string>
    <string name="activity_p2plogin_server_port_err">Please check input p2p port</string>
    <string name="activity_p2plogin_server_ip_empty">Please input p2p server ip</string>
    <string name="activity_p2plogin_server_port_empty">Please input p2p server port</string>
    <string name="activity_p2plogin_username_empty">Please input p2p username</string>
    <string name="activity_p2plogin_password_empty">Please input p2p password</string>
    <string name="activity_p2plogin_device_sn_empty">Please input device sn</string>
    <string name="failed_start_server">Failed to start P2P service.</string>
    <string name="please_input_device_sn">Please input device sn.</string>
    <string name="please_input_wlan_ssid">Please input waln ssid.</string>
    <string name="please_check_wlan_ssid">Please check alan ssid.</string>
    <string name="please_input_init_passwd">Please input init passwd.</string>
    <string name="please_input_init_phone">Please input phone.</string>
    <string name="please_input_init_mail">Please input mail.</string>
    <string name="activity_p2plogin_server_ip">P2P Server IP</string>
    <string name="activity_p2plogin_server_port">P2P Server Port</string>
    <string name="activity_p2plogin_username">P2P Username</string>
    <string name="activity_p2plogin_password">P2P Password</string>
    <string name="activity_p2plogin_device_id">Device SN</string>
    <string name="activity_p2plogin_device_port">Device Port</string>
    <string name="activity_p2plogin_device_username">Device Username </string>
    <string name="activity_p2plogin_device_password">Device Password</string>
    <string name="activity_function_list_live_preview"> Live Preview (Single Channel) </string>
    <string name="activity_function_list_double_channel"> Live Preview (Double Channel)</string>
    <string name="activity_function_list_play_back"> Playback </string>
    <string name="activity_function_list_download_record">DownLoad Record</string>
    <string name="activity_function_list_talk"> Talk </string>
    <string name="activity_function_list_alarm_listen"> Alarm Listen </string>
    <string name="activity_function_list_alarm_push"> Alarm Push </string>
    <string name="activity_function_list_alarm_control"> Alarm Control </string>
    <string name="activity_function_list_device_control"> Device Control </string>
    <string name="activity_function_list_capture_picture"> Capture Picture </string>
    <string name="activity_function_lise_interface_test">Interface Test</string>
    <string name="activity_function_list_mark_record">Mark Record</string>
    <string name="activity_function_list_video_talk">Video Talk</string>
    <string name="channel">Channel</string>
    <string name="stream_type"> Strream Type </string>
    <string name="activity_queryLog_beginTime">Start</string>
    <string name="talk">Talk&#160;</string>
    <string name="transfer_mode">Transfer Mode</string>
    <string name="transfer_channel">Transfer Channel</string>
    <string name="set_transfer_channel">Set Transfer Channel&#160;</string>
    <string name="set_transfer_mode">Set Transfer Mode&#160;</string>
    <string name="start_talk"> Start Talk </string>
    <string name="stop_talk"> Stop Talk </string>
    <string name="speak_only"> Shout </string>
    <string name="start_speak_only"> Start Shout</string>
    <string name="stop_speak_only"> Stop Shout </string>
    <string name="start_audio_record">Start Audio Record&#160;</string>
    <string name="set_speaking_parameter">Set Speaking Parameter&#160;</string>
    <string name="set_server_mode">Set Server Mode&#160;</string>
    <string name="set_talk_encode_mode">Set Talk Encode Mode&#160;</string>
    <string name="video_talk">Video Talk&#160;</string>
    <string name="start_video_talk">Start Video Talk</string>
    <string name="stop_video_talk">Stop Video Talk</string>
    <string name="access_open">Access Open&#160;</string>
    <string name="set_talk_client_mode">Set Talk Client Mode&#160;</string>
    <string name="set_talk_speak_param">Set Talk Speak Param&#160;</string>
    <string name="capture_picture_remote">Remote Capture</string>
    <string name="capture_picture_local">Local Capture</string>
    <string name="capture_picture_timer_start">Timer Capture</string>
    <string name="capture_picture_timer_stop">Stop Capture</string>
    <string name="capture_picture_channel">Capture Channel</string>
    <string name="encode">Encode</string>
    <string name="osd_channel_title">Chn Title</string>
    <string name="osd_time_title">Time Title</string>
    <string name="ptz_control">PTZ</string>
    <string name="ptz_control_fragment_up">Up</string>
    <string name="ptz_control_fragment_down">Down</string>
    <string name="ptz_control_fragment_left">Left</string>
    <string name="ptz_control_fragment_right">Right</string>
    <string name="ptz_control_fragment_zoom_add">Zoom+</string>
    <string name="ptz_control_fragment_zoom_dec">Zoom-</string>
    <string name="ptz_control_fragment_focus_add">Focus+</string>
    <string name="ptz_control_fragment_focus_dec">Focus-</string>
    <string name="ptz_control_fragment_aperture_add">Iris+</string>
    <string name="ptz_control_fragment_aperture_dec">Iris-</string>
    <string name="ptz_control_fragment_setpreset">Set</string>
    <string name="ptz_control_fragment_clearpreset">Clear</string>
    <string name="ptz_control_fragment_gotopreset">Goto</string>
    <string name="ptz_control_fragment_preset">Preset ID:</string>
    <string name="ptz_control_fragment_info">PTZ support Sliding Operation, Zoom support two points Touch Operation. </string>
    <string name="yes">OK</string>
    <string name="input_number">Please Input Number.</string>
    <string name="device_control_restart">Reboot Device</string>
    <string name="device_control_setuptime">Set Time</string>
    <string name="device_control_gettime">Get Time</string>
    <string name="config_startsearchdevice">StartSearchDevice</string>
    <string name="config_stopsearchdevice">StopSearchDevice</string>
    <string name="device_initialize">Initialize Device</string>
    <string name="device_unable_init">Old Device,Device unable initialization</string>
    <string name="device_had_init">Device had initialization</string>
    <string name="start_search_device_failed">Start search device failed</string>
    <string name="stop_search_device_failed">Stop search device failed</string>
    <string name="init_device_failed">Init device failed</string>
    <string name="init_device_success">Initialize device success</string>
    <string name="alarm_control_input_channel">InputChannel</string>
    <string name="alarm_control_input_state">InputState</string>
    <string name="alarm_control_output_channel">OutputChannel</string>
    <string name="alarm_control_output_state">OutputState</string>
    <string name="alarm_control_trigger_channel">TriggerChannel</string>
    <string name="alarm_control_trigger_mode">TriggerMode</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="device_no_support_alarm_input_control">Device not support alarm input control.</string>
    <string name="device_no_support_alarm_output_control">Device not support alarm output control.</string>
    <string name="device_no_support_alarm_trigger_control">Device not support alarm trigger control.</string>
    <string name="alarm_push">Alarm Push</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="alarm_push_subscribe">Subscribe Alarm Push</string>
    <string name="alarm_push_unsubscribe">Delete Alarm Push</string>
    <string name="alarm_push_not_support_google_service">Google Service not support</string>
    <string name="alarm_push_sub_successed">Subscribe succeed</string>
    <string name="alarm_push_sub_failed">Subscribe failed</string>
    <string name="alarm_push_unsub_successed">Unsubscribe succeed</string>
    <string name="alarm_push_unsub_failed">Unsubscribe failed</string>
    <string name="alarm_push_video_motion">Video motion</string>
    <string name="alarm_push_unknown_type">Alarm unknown</string>
    <string name="alarm_push_title">Alarm</string>
    <string name="alarm_push_alarm_type">Alarm Type</string>
    <string name="alarm_push_alarm_time">Alarm Time</string>
    <string name="live_preview_failed">Realplay failed.</string>
    <string name="live_preview_not_open">Please start real play first.</string>
    <string name="local_record_failed">Local record failed.</string>
    <string name="open_stream">OpenStream</string>
    <string name="live_preview_not_support_double_channel">The device not support double channel preview.</string>
    <string name="alarm_listen_external_alarm">AlarmLocal</string>
    <string name="alarm_listen_motion_alarm">VideoMotion</string>
    <string name="alarm_listen_video_lost_alarm">VideoLoss</string>
    <string name="alarm_listen_shelter_alarm">VideoBlind</string>
    <string name="alarm_listen_disk_full_alarm">StorageLowSpace</string>
    <string name="compress_format">Encode Setting</string>
    <string name="resolve_ratio">Resolution</string>
    <string name="frame_rate">Frame Rate(FPS)</string>
    <string name="bit_stream">Bit Rate</string>
    <string name="setting">Setting</string>
    <string name="start_replay">Start Replay</string>
    <string name="start_record">Start Record</string>
    <string name="time_title_enable">Time Title Enable</string>
    <string name="show_week">Show Week</string>
</resources>