<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/encode_set_layout"
        style="@style/config_relativeLayout"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/encode_set_label"
            style="@style/config_text"
            android:text="@string/compress_format" />

        <TextView
            android:id="@+id/encode_set_text"
            style="@style/config_text_image"
            android:background="@null"
            android:layout_toRightOf="@id/encode_set_label"
            android:drawableRight="@drawable/mm_submenu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resolution_set_layout"
        style="@style/config_relativeLayout"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/resolution_set_label"
            style="@style/config_text"
            android:text="@string/resolve_ratio" />

        <TextView
            android:id="@+id/resolution_set_text"
            style="@style/config_text_image"
            android:background="@null"
            android:layout_toRightOf="@id/resolution_set_label"
            android:drawableRight="@drawable/mm_submenu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_rate_set_layout"
        style="@style/config_relativeLayout"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/frame_rate_set_label"
            style="@style/config_text"
            android:text="@string/frame_rate" />

        <TextView
            android:id="@+id/frame_rate_set_text"
            style="@style/config_text_image"
            android:background="@null"
            android:layout_toRightOf="@id/frame_rate_set_label"
            android:drawableRight="@drawable/mm_submenu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bit_rate_set_layout"
        style="@style/config_relativeLayout"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/bit_rate_set_label"
            style="@style/config_text"
            android:text="@string/bit_stream" />

        <TextView
            android:id="@+id/bit_rate_set_text"
            style="@style/config_text_image"
            android:background="@null"
            android:layout_toRightOf="@id/bit_rate_set_label"
            android:drawableRight="@drawable/mm_submenu" />
    </RelativeLayout>


    <Button
        android:textAllCaps="false"
        android:text="@string/setting"
        android:id="@+id/encode_set_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>
</LinearLayout>