<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/ptz_control">

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_focus_add"
        android:text="@string/ptz_control_fragment_focus_add"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_focus_dec"
        android:text="@string/ptz_control_fragment_focus_dec"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/preview_aperture_add"
        android:layout_toEndOf="@+id/preview_aperture_add"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_aperture_add"
        android:text="@string/ptz_control_fragment_aperture_add"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/preview_focus_add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_aperture_dec"
        android:text="@string/ptz_control_fragment_aperture_dec"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/preview_aperture_add"
        android:layout_toRightOf="@+id/preview_aperture_add"
        android:layout_toEndOf="@+id/preview_aperture_add"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:id="@+id/edittext_preset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="0~999"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_above="@+id/preview_clearpreset"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:background="@drawable/divier"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_setpreset"
        android:text="+"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/preview_gotopreset"
        android:layout_toLeftOf="@+id/preview_gotopreset"
        android:layout_toStartOf="@+id/preview_gotopreset" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_gotopreset"
        android:text="@string/ptz_control_fragment_gotopreset"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/preview_aperture_dec"
        android:layout_toLeftOf="@+id/preview_clearpreset"
        android:layout_toStartOf="@+id/preview_clearpreset"
        android:layout_marginLeft="5dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/preview_clearpreset"
        android:text="-"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/preview_gotopreset"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ptz_control_fragment_preset"
        android:id="@+id/textView9"
        android:textSize="15sp"
        android:layout_above="@+id/preview_setpreset"
        android:layout_alignLeft="@+id/preview_setpreset"
        android:layout_alignStart="@+id/preview_setpreset" />

</RelativeLayout>
