<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.company.netsdk.activity.LivePreviewActivity">

    <LinearLayout
        android:id="@+id/selector_continer"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:id="@+id/select_channel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/wp_spinner_bg" />
        <Spinner
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:id="@+id/select_stream_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/wp_spinner_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line_2">

        <include
            android:id="@+id/ptz_control"
            layout="@layout/ptz_control"
            android:gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear_real_play"
        android:layout_below="@+id/selector_continer">
        <SurfaceView
            android:id="@+id/real_view"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </LinearLayout>

    <View android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primaryBlue"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/liner_1">

    </View>

    <LinearLayout
        android:id="@+id/liner_1"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_marginBottom="5dp">

        <Button
            android:textAllCaps="false"
            android:id="@+id/buttonStartReplay"
            android:text="@string/start_replay"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp" />
        <Button
            android:textAllCaps="false"
            android:id="@+id/buttonLocalCapture"
            android:text="@string/capture_picture_local"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/buttonStartRecord"
            android:text="@string/start_record"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_ptz_control"
            android:text="@string/ptz_control"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:visibility="gone"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_encode"
            android:text="@string/encode"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_osd_channel"
            android:text="@string/osd_channel_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/preview_osd_time"
            android:text="@string/osd_time_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <View android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true">

    </View>

</RelativeLayout>